# TVS-Renamer

./: .directory  .gitignore  Cargo.toml  README.md  TVSRenamer.sln  db.json
TVSRenamer/: App.config  App.xaml  App.xaml.cs  DownloadFromApi.cs  Info.xaml  Info.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MoreInfo.xaml  MoreInfo.xaml.cs  OknoSettings.xaml  OknoSettings.xaml.cs  ProgressBarWindow.xaml  ProgressBarWindow.xaml.cs  SelectShow.xaml  SelectShow.xaml.cs  Settings.cs  Settings.xaml  Settings.xaml.cs  TVSRenamer.csproj  packages.config  specificEP.xaml  specificEP.xaml.cs
TVSRenamer/Classes/: DownloadFromApi.cs  Renamer.cs
TVSRenamer/Pages/: Details.xaml  Details.xaml.cs  Info.xaml  Info.xaml.cs  Locations.xaml  Locations.xaml.cs  SearchResult.xaml  SearchResult.xaml.cs  SelectShow.xaml  SelectShow.xaml.cs
TVSRenamer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
TVSRenamerSetup/: TVSRenamerSetup.vdproj
src/: helper.rs  logger.rs  main.rs  renamer.rs
src/api/: endpoints.rs  episode.rs  mod.rs  search.rs  show.rs  tv_maze.rs
src/args/: args_parser.rs  mod.rs
src/database/: database.rs  mod.rs  models.rs
