[package]
name = "TVSR"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.11.11", features = ["blocking", "json"]}
ansi_term = "0.12.1"
