[package]
name = "tvsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = {version = "2.5.0", features = ["json"]}
ansi_term = "0.12.1"
walkdir = "2.3.2"
log = "0.4"
simplelog = "0.12.0"